# IV.EFLC.Rainbomizer

./: CMakeLists.txt  README.md  README.txt
.github/workflows/: main.yml
data/: Objects.txt
data/IV/: AudioBanks.txt  AudioExceptions.txt  CutsceneModels.txt  Missions.txt  VehiclePatterns.txt  WeaponWeights.txt
data/TBOGT/: AudioBanks.txt  CutsceneModels.txt  Missions.txt  VehiclePatterns.txt  WeaponWeights.txt
data/TLAD/: AudioBanks.txt  CutsceneModels.txt  Missions.txt  VehiclePatterns.txt  WeaponWeights.txt
include/: configDefault.hh
lib/: CCarGenerator.hh  CCarGrp.cc  CCarGrp.hh  CCrypto.cc  CCrypto.hh  CDrawCommands.cc  CDrawCommands.hh  CEntity.cc  CEntity.hh  CHud.cc  CHud.hh  CMaths.cc  CMaths.hh  CModelInfo.cc  CModelInfo.hh  CModelInfoStore.cc  CModelInfoStore.hh  CPed.cc  CPed.hh  CPlayer.cc  CPlayer.hh  CPools.cc  CPools.hh  CScrVM.cc  CScrVM.hh  CScriptText.cc  CScriptText.hh  CStreaming.cc  CStreaming.hh  CText.cc  CText.hh  CTheScripts.cc  CTheScripts.hh  CTimer.cc  CTimer.hh  CVehicle.hh  CVehicleFactory.cc  CVehicleFactory.hh  CWeaponInfo.cc  CWeaponInfo.hh  (+13 more)
lib/Patterns/: Patterns.cpp  Patterns.hh
lib/injector/: hooking.hpp
src/: audio.cc  caud.cc  ccheat.cc  ccuts.cc  cheats.cc  cmiss.cc  colours.cc  common.cc  common.hh  config.cc  config.hh  cpark.cc  crand.cc  cscr.cc  ctraf.cc  cutscenes.cc  cweap.cc  logger.cc  logger.hh  missions.cc  objects.cc  parked.cc  scr.cc  timecyc.cc  traffic.cc  weapons.cc
